name:                lens-th
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             ISC
license-file:        LICENSE
author:              Eric Mertens
maintainer:          emertens@galois.com
copyright:           2016 Eric Mertens
category:            Development
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  ghc-options: -Wall -ddump-splices
  exposed-modules:     ClauseBuilder, LensBuilder, TypeBuilder, Types
  other-modules:       Test, ListUtils
  build-depends:       base >=4.9 && <4.10,
                       template-haskell >=2.11 && <2.12,
                       th-abstraction >=0.1 && <0.2,
                       lens >=4.15 && <4.16,
                       containers >=0.5 && <0.6
  hs-source-dirs:      src
  default-language:    Haskell2010
